--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vite serve"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@vitejs/plugin-vue": "^3.0.1",
+    "vite": "^3.0.2",
+    "vue": "^3.2.37"
+  }
 }
