--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "vite serve"
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
