--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
+    "unplugin-vue-components": "^0.21.1",
     "vite": "^3.0.2",
     "vue": "^3.2.37"
+  },
+  "devDependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
