--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
     "markdown-it": "^13.0.1",
+    "monaco-editor": "^0.33.0",
     "unplugin-vue-components": "^0.21.1",
     "vite": "^3.0.2",
     "vue": "^3.2.37"
